# sistemas-operacionais

./: .gitignore  CMakeLists.txt  exemplo.txt  main.cpp
headers/config/: CarregadorConfig.hpp
headers/escalonadores/: Escalonador.hpp  PriopEscalonador.hpp  SRTFEscalonador.hpp
headers/gerenciadores/: GerenciadorTarefa.hpp  gerenciadorGrafico.hpp
headers/simulacao/: CPU.hpp  EstadoSistema.hpp
headers/tarefa/: tarefa.hpp
headers/telas/: TelaInicial.hpp  TelaSimulacao.hpp
src/config/: CarregadorConfig.cpp
src/escalonadores/: PriopEscalonador.cpp  SRTFescalonador.cpp
src/gerenciadores/: GerenciadorTarefa.cpp  gerenciadorGrafico.cpp
src/tarefa/: tarefa.cpp
src/telas/: TelaInicial.cpp  TelaSimulacao.cpp
